public static class EnemyAnimation
{
    public static class States
    {
        public static string Idle => "Idle";
        public static string Move => "Move";
        public static string Death => "Death";
    }

    public static class Parameters
    {
        public static string Damage => "Damage";
        public static string Attack => "Attack";
        public static string Death => "Death";
        public static string Speed => "Speed";
        public static string IsDead => "IsDead";

    }
}
